# NDE_Open_File_Format

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CNAME  Gemfile  LICENSE  README.md  _config.yml  index.html  latest  screenshot.js  versions.json
.github/workflows/: deploy-doc.yml  deploy.yml
3.3/: 404.html  index.html
3.3/changelog/: index.html
3.3/code-samples/: index.html
3.3/quickstart/: index.html
3.3/reference-files/: index.html
3.3/search/: search_index.json
4.0/: 404.html  index.html  sitemap.xml
4.0-Beta/: 404.html  index.html
4.0-Beta/examples/: index.html
4.0-Beta/faq/: index.html
4.0-Beta/getting-started/: index.html
4.0-Beta/hdf5-structure/: index.html
4.0-Beta/json-metadata/: index.html
4.0-Beta/search/: search_index.json
4.0-Beta/supporting-software/: index.html
4.0-Beta/versioning/: index.html
4.0-prerelease/: 404.html  index.html
4.0-prerelease/examples/: index.html
4.0-prerelease/faq/: index.html
4.0-prerelease/history/: index.html
4.0-prerelease/search/: search_index.json
4.0-prerelease/whats-new-4.0/: index.html
4.0/examples/: index.html
4.0/faq/: index.html
4.0/getting-started/: index.html
4.0/hdf5-structure/: index.html
4.0/json-metadata/: index.html
4.0/search/: search_index.json
4.0/supporting-software/: index.html
4.0/versioning/: index.html
4.1/: 404.html  index.html  sitemap.xml
4.1/asnt2025/: index.html
4.1/examples/: index.html
4.1/faq/: index.html
4.1/getting-started/: index.html
4.1/hdf5-structure/: index.html
4.1/json-metadata/: index.html
4.1/search/: search_index.json
4.1/supporting-software/: index.html
4.2/: 404.html  index.html  sitemap.xml
4.2/faq/: index.html
4.3/: 404.html  index.html  sitemap.xml
compatibilities/: FileFormat.cpp  FileFormat.h  FileFormatChanges.h  FileFormatChanges_2_2_13.cpp  FileFormatChanges_2_2_13.h  FileFormatChanges_3_0_0.cpp  FileFormatChanges_3_0_0.h  FileFormatChanges_3_1_0.cpp  FileFormatChanges_3_1_0.h  FileFormatChanges_3_2_0.cpp  FileFormatChanges_3_2_0.h  FileResult.h
docs/: Intro.md  schema_doc.html  schema_doc.md
examples/: CMakeLists.txt  LICENSE
scenarios/: Plate_Escan.nde
schemas/: NDE-FileFormat-Schema-3.0.0.json  NDE-FileFormat-Schema-3.0.1.json  NDE-FileFormat-Schema-3.1.0.json  NDE-FileFormat-Schema-3.1.1.json  NDE-FileFormat-Schema-3.2.0.json  NDE-FileFormat-Schema-3.3.0.json  Properties-Schema-4.0.0.json  Properties-Schema-4.1.0.json  Properties-Schema-4.2.0.json  Properties-Schema-4.3.0.json  Setup-Schema-4.0.0.json  Setup-Schema-4.1.0.json  Setup-Schema-4.2.0.json  Setup-Schema-4.3.0.json
site/: Gemfile  _config.yml  mkdocs.yml
(+478 files in other folders)
